--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.6.6",
+		"flickity": "^3.0.0",
 		"formik": "^2.2.9",
 		"next": "12.1.4",
 		"react": "18.0.0",
-		"react-dom": "18.0.0"
+		"react-dom": "18.0.0",
+		"react-flickity-component": "^3.6.2"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^5.5.0",
