--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"@headlessui/react": "^1.6.6",
 		"flickity": "^3.0.0",
 		"formik": "^2.2.9",
-		"next": "12.1.4",
+		"next": "^12.3.1",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-flickity-component": "^3.6.2"
@@ -25,6 +25,8 @@
 		"autoprefixer": "^10.2.6",
 		"eslint": "8.13.0",
 		"eslint-config-next": "12.1.4",
+		"gray-matter": "^4.0.3",
+		"next-mdx-remote": "^4.1.0",
 		"postcss": "^8.3.5",
 		"tailwindcss": "^2.2.4",
 		"typescript": "4.6.3"
