--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "1",
+		"@chakra-ui/react": "1.6.12",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
 		"@headlessui/react": "^1.6.6",
 		"flickity": "^3.0.0",
 		"formik": "^2.2.9",
+		"framer-motion": "^7.5.3",
 		"next": "^12.3.1",
+		"next-seo": "^5.5.0",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-flickity-component": "^3.6.2"
@@ -22,12 +28,14 @@
 		"@types/node": "17.0.23",
 		"@types/react": "18.0.0",
 		"@types/react-dom": "18.0.0",
+		"@types/react-syntax-highlighter": "^15.5.5",
 		"autoprefixer": "^10.2.6",
 		"eslint": "8.13.0",
 		"eslint-config-next": "12.1.4",
 		"gray-matter": "^4.0.3",
-		"next-mdx-remote": "^4.1.0",
+		"next-mdx-remote": "3",
 		"postcss": "^8.3.5",
+		"react-syntax-highlighter": "^15.5.0",
 		"tailwindcss": "^2.2.4",
 		"typescript": "4.6.3"
 	}
